--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="accountCtrl">
     <div class="row">
         <!-- Navigation bar at the top of the page -->
         <nav class="navbar navbar-default navbar-fixed-top">
