--- a/htmlpages/views/store.html
+++ b/htmlpages/views/store.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="storeCtrl">
 
     <div class="row">
         <!-- Navigation bar at the top of the page -->
@@ -77,7 +77,12 @@
 
         </nav>
     </div>
-</div>
 
-<br><br><br>
-THIS IS THE STORE
+    <br><br><br><br><br>
+    <div class="row">
+        <div class="col-lg-offset-1 col-lg-5">
+            <button ng-click="getData()">Refresh</button>
+            {{getOrders}}
+        </div>
+    </div>
+</div>
